--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 <h1 align="center"><b><em>CURRICULUM VITAE</em></b></h1>
 <img src="https://cdn2.ettoday.net/images/2478/d2478497.jpg" width="20%"><img src="http://pic.90sjimg.com/design/00/57/93/24/58fad0225eafe.png" width="3%"><sup><sup><big>MY IMAGE</big></sup></sup>
+<!-- Site navigation menu -->
+<ul class="navbar">
 <li><a href="https://github.com/chynus/lowmenghock.github.io/raw/master/MYPPT.pptx.pptx/">MYPPT.xlsx</a></li>
 <li><a href="https://github.com/chynus/lowmenghock.github.io/raw/master/MyWord.docx.docx">MyWord.docx</a></li>
 <li><a href="https://github.com/chynus/lowmenghock.github.io/raw/master/piechart.xlsx.xlsx">piechart.xlsx</a></li>
 <li><a href="https://github.com/chynus/lowmenghock.github.io/raw/master/Mooncity.xlsx.xlsx">moonlight.xlsx</a></li>
 <li><a href="https://chynus.github.io/myspace/">My Space</a></li>
+</ul>
 <h5><em><b>Name</b></em> : Low Meng Hock</h5>
 <h5><em><b>Nationality</b></em> : Malaysian</h5>
 <h5><em><b>HP</b></em> : 011-1168 1121<b></h5>
